@@ -32,6 +32,13 @@ SOAPUI_CLASSPATH=$JFXRTPATH:$SOAPUI_CLASSPATH
 export SOAPUI_CLASSPATH
 
 JAVA_OPTS="-Xms128m -Xmx1024m -Dsoapui.properties=soapui.properties -Dgroovy.source.encoding=iso-8859-1 -Dsoapui.home=$SOAPUI_HOME/bin"
+
+#CVE-2021-44228
+JAVA_OPTS="$JAVA_OPTS -Dlog4j2.formatMsgNoLookups=true"
+
+#JAVA 16
+JAVA_OPTS="$JAVA_OPTS --illegal-access=permit"
+
 if [ $SOAPUI_HOME != "" ] 
 then
     JAVA_OPTS="$JAVA_OPTS -Dsoapui.ext.libraries=$SOAPUI_HOME/bin/ext"
